datasource db {
  provider = "postgresql"
}

generator client {
  provider = "prisma-client-js"
}

enum Language {
  PYTHON
  JS
  TS
  JAVA
  RUST
  GO
  KOTLIN
  SWIFT
  CPP
}

enum KnowledgeNodeType {
  FOUNDATION
  LANGUAGE
  CONCEPT
  FRAMEWORK
  LIBRARY
  TOOL
  DATABASE
  ARCHITECTURE
  PROJECT
  CHALLENGE
}

enum KnowledgeRelation {
  REQUIRED
  RECOMMENDED
  RELATED
  BUILDS_ON
  COMBINES
}

enum KnowledgeProgressStatus {
  NOT_STARTED
  AVAILABLE
  RECOMMENDED
  IN_PROGRESS
  COMPLETED
  MASTERED
}

enum AssistanceMode {
  GUIDED
  STANDARD
  HARD
  NO_ASSIST
}

enum ExerciseSubmissionStatus {
  PASSED
  FAILED
  ERROR
}

enum LearningEventType {
  HINT_OPENED
  DOCUMENTATION_OPENED
  EXERCISE_RUN
  EXERCISE_SUBMIT
  TEST_FAILED
  TEST_PASSED
  EXERCISE_COMPLETED
}

enum UserRole {
  USER
  EVALUATOR
  ADMIN
  RECRUITER
}

enum DuelStatus {
  PENDING
  ACTIVE
  REVIEW_PENDING
  CLOSED
  EXPIRED
}

enum DuelRequestStatus {
  PENDING
  ACCEPTED
  REJECTED
  EXPIRED
}

enum EvaluationType {
  AUTOMATIC
  AI_SUGGESTED
  HUMAN_EVALUATED
}

enum DuelSubmissionStatus {
  ACCEPTED
  WRONG_ANSWER
  COMPILE_ERROR
  RUNTIME_ERROR
  TIME_LIMIT_EXCEEDED
  JUDGE_UNAVAILABLE
}

enum EvaluatorStatus {
  PENDING
  APPROVED
  REJECTED
}

enum JobLevel {
  ESTAGIO
  JUNIOR
  PLENO
  SENIOR
  ESPECIALISTA
}

enum JobModality {
  REMOTE
  HYBRID
  ONSITE
}

enum JobContract {
  CLT
  PJ
  ESTAGIO
}

enum JobStatus {
  OPEN
  CLOSED
  DRAFT
}

enum ApplicationStatus {
  APPLIED
  IN_REVIEW
  TECHNICAL_CHALLENGE
  DUEL
  EVALUATION
  INTERVIEW
  OFFER
  REJECTED
}

enum RecruitmentStageType {
  INSCRICAO
  DESAFIO_TECNICO
  DUELO_TECNICO
  AVALIACAO
  ENTREVISTA
  CONTRATACAO
}

enum EventType {
  HACKATHON
  CHAMPIONSHIP
  WORKSHOP
  CHALLENGE
}

enum EventStatus {
  UPCOMING
  ONGOING
  COMPLETED
}

model User {
  id                     String    @id @default(uuid())
  username               String    @unique
  email                  String    @unique
  avatar_url             String?
  avatar_config          Json?
  bio                    String?
  institution            String?
  github_username        String?
  discord_username       String?
  banner_url             String?
  pronouns               String?
  birthday               DateTime?
  username_changed_at    DateTime?
  total_xp               Int       @default(0)
  streak_days            Int       @default(0)
  role                   UserRole  @default(USER)
  consecutive_rejections Int       @default(0)
  duel_cooldown_until    DateTime?
  last_active_at         DateTime?
  created_at             DateTime  @default(now())

  trails                 LanguageTrail[]
  posts                  Post[]
  answers                Answer[]
  quiz_attempts          QuizAttempt[]
  badges                 UserBadge[]
  duels_as_challenger    Duel[]                 @relation("challenger")
  duels_as_opponent      Duel[]                 @relation("opponent")
  duels_won              Duel[]                 @relation("duel_winner")
  duel_solutions         DuelSolution[]
  duel_submissions       DuelSubmission[]
  duel_votes             DuelVote[]
  post_votes             PostVote[]
  answer_votes           AnswerVote[]
  sent_messages          Message[]              @relation("sent_messages")
  received_messages      Message[]              @relation("received_messages")
  bookmarks              Bookmark[]
  notifications          Notification[]
  notifications_acted    Notification[]         @relation("NotificationActor")
  reports                Report[]
  followers              Follow[]               @relation("Followers")
  following              Follow[]               @relation("Following")
  reactions              Reaction[]
  message_reactions      MessageReaction[]
  guilds_owned           Guild[]                @relation("OwnedGuilds")
  guild_memberships      GuildMember[]
  evaluator_profile      EvaluatorProfile?
  evaluator_applications EvaluatorApplication[]
  companies_owned        Company[]
  job_applications       JobApplication[]
  duel_evaluations       DuelEvaluation[]
  events_created         Event[]
  event_participants     EventParticipant[]
  duel_requests_sent     DuelRequest[]          @relation("duel_requests_sent")
  duel_requests_recv     DuelRequest[]          @relation("duel_requests_recv")
  node_progress          UserNodeProgress[]
  exercise_runs          ExerciseRun[]
  exercise_submissions   ExerciseSubmission[]
  learning_events        LearningEvent[]

  @@index([total_xp(sort: Desc)])
  @@index([role])
}

model EvaluatorApplication {
  id             String          @id @default(uuid())
  user_id        String
  motivation     String
  tech_stack     String[]
  status         EvaluatorStatus @default(PENDING)
  reviewed_by_id String?
  reviewer_notes String?
  created_at     DateTime        @default(now())
  reviewed_at    DateTime?

  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@index([status, created_at])
}

model EvaluatorProfile {
  id                String   @id @default(uuid())
  user_id           String   @unique
  reputation        Int      @default(100)
  evaluations_count Int      @default(0)
  approved_at       DateTime @default(now())

  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)
}

model Company {
  id          String   @id @default(uuid())
  owner_id    String
  name        String
  slug        String   @unique
  description String?
  logo_url    String?
  website     String?
  location    String?
  is_verified Boolean  @default(false)
  created_at  DateTime @default(now())

  owner  User    @relation(fields: [owner_id], references: [id], onDelete: Cascade)
  jobs   Job[]
  events Event[]

  @@index([slug])
}

model Job {
  id            String      @id @default(uuid())
  company_id    String
  title         String
  description   String
  level         JobLevel    @default(JUNIOR)
  technologies  String[]
  modality      JobModality @default(REMOTE)
  location      String?
  contract_type JobContract @default(CLT)
  salary_min    Int?
  salary_max    Int?
  currency      String      @default("BRL")
  requirements  String[]
  benefits      String[]
  status        JobStatus   @default(OPEN)
  created_at    DateTime    @default(now())
  expires_at    DateTime?

  company      Company               @relation(fields: [company_id], references: [id], onDelete: Cascade)
  stages       JobRecruitmentStage[]
  applications JobApplication[]

  @@index([status, created_at])
}

model JobRecruitmentStage {
  id           String               @id @default(uuid())
  job_id       String
  title        String
  type         RecruitmentStageType @default(INSCRICAO)
  order        Int                  @default(1)
  challenge_id String?
  description  String?

  job          Job              @relation(fields: [job_id], references: [id], onDelete: Cascade)
  applications JobApplication[]

  @@index([job_id, order])
}

model JobApplication {
  id              String            @id @default(uuid())
  job_id          String
  user_id         String
  stage_id        String?
  status          ApplicationStatus @default(APPLIED)
  technical_score Int?
  feedback        String?
  created_at      DateTime          @default(now())
  updated_at      DateTime          @updatedAt

  job   Job                  @relation(fields: [job_id], references: [id], onDelete: Cascade)
  user  User                 @relation(fields: [user_id], references: [id], onDelete: Cascade)
  stage JobRecruitmentStage? @relation(fields: [stage_id], references: [id], onDelete: SetNull)

  @@unique([job_id, user_id])
  @@index([job_id, status])
}

model LanguageTrail {
  id               String    @id @default(uuid())
  user_id          String
  language         Language
  xp               Int       @default(0)
  level            Int       @default(1)
  streak           Int       @default(0)
  last_activity_at DateTime?

  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([user_id, language])
}

model KnowledgeNode {
  id                String            @id @default(uuid())
  slug              String            @unique
  title             String
  description       String
  type              KnowledgeNodeType
  category          String
  language          Language?
  difficulty        Int
  xp_reward         Int
  estimated_minutes Int?
  position_x        Int
  position_y        Int
  is_published      Boolean           @default(false)
  created_at        DateTime          @default(now()) @db.Timestamptz(3)
  updated_at        DateTime          @updatedAt @db.Timestamptz(3)

  outgoing_edges KnowledgeEdge[]    @relation("KnowledgeEdgeSource")
  incoming_edges KnowledgeEdge[]    @relation("KnowledgeEdgeTarget")
  path_nodes     LearningPathNode[]
  exercises      Exercise[]
  user_progress  UserNodeProgress[]

  @@index([is_published, category])
  @@index([language])
  @@map("knowledge_nodes")
}

model KnowledgeEdge {
  id             String            @id @default(uuid())
  source_node_id String
  target_node_id String
  relation       KnowledgeRelation
  created_at     DateTime          @default(now()) @db.Timestamptz(3)

  source_node KnowledgeNode @relation("KnowledgeEdgeSource", fields: [source_node_id], references: [id], onDelete: Cascade)
  target_node KnowledgeNode @relation("KnowledgeEdgeTarget", fields: [target_node_id], references: [id], onDelete: Cascade)

  @@unique([source_node_id, target_node_id, relation])
  @@index([source_node_id])
  @@index([target_node_id])
  @@map("knowledge_edges")
}

model LearningPath {
  id                String   @id @default(uuid())
  slug              String   @unique
  title             String
  description       String
  accent_color      String
  estimated_minutes Int?
  is_featured       Boolean  @default(false)
  is_published      Boolean  @default(false)
  created_at        DateTime @default(now()) @db.Timestamptz(3)
  updated_at        DateTime @updatedAt @db.Timestamptz(3)

  nodes LearningPathNode[]

  @@index([is_published, is_featured])
  @@map("learning_paths")
}

model LearningPathNode {
  id                String @id @default(uuid())
  learning_path_id  String
  knowledge_node_id String
  position          Int

  learning_path  LearningPath  @relation(fields: [learning_path_id], references: [id], onDelete: Cascade)
  knowledge_node KnowledgeNode @relation(fields: [knowledge_node_id], references: [id], onDelete: Cascade)

  @@unique([learning_path_id, knowledge_node_id])
  @@unique([learning_path_id, position])
  @@index([knowledge_node_id])
  @@map("learning_path_nodes")
}

model Exercise {
  id                String   @id @default(uuid())
  slug              String   @unique
  knowledge_node_id String
  title             String
  summary           String
  problem           String
  objective         String
  language          Language
  difficulty        Int
  base_xp           Int
  estimated_minutes Int?
  starter_code      String
  function_name     String
  constraints       String[]
  hints             String[]
  documentation_url String?
  examples          Json     @default("[]")
  is_published      Boolean  @default(false)
  created_at        DateTime @default(now()) @db.Timestamptz(3)
  updated_at        DateTime @updatedAt @db.Timestamptz(3)

  knowledge_node KnowledgeNode        @relation(fields: [knowledge_node_id], references: [id], onDelete: Cascade)
  test_cases     ExerciseTestCase[]
  runs           ExerciseRun[]
  submissions    ExerciseSubmission[]
  events         LearningEvent[]

  @@index([knowledge_node_id, is_published])
  @@index([language, difficulty])
  @@map("exercises")
}

model ExerciseTestCase {
  id              String  @id @default(uuid())
  exercise_id     String
  label           String
  input           Json?
  invocation_code String?
  expected_output Json
  is_hidden       Boolean @default(false)
  position        Int

  exercise Exercise @relation(fields: [exercise_id], references: [id], onDelete: Cascade)

  @@unique([exercise_id, position])
  @@index([exercise_id, is_hidden])
  @@map("exercise_test_cases")
}

model UserNodeProgress {
  id                  String                  @id @default(uuid())
  user_id             String
  knowledge_node_id   String
  status              KnowledgeProgressStatus @default(NOT_STARTED)
  mastery             Int                     @default(0)
  completed_exercises Int                     @default(0)
  started_at          DateTime?               @db.Timestamptz(3)
  completed_at        DateTime?               @db.Timestamptz(3)
  last_activity_at    DateTime                @default(now()) @db.Timestamptz(3)
  created_at          DateTime                @default(now()) @db.Timestamptz(3)
  updated_at          DateTime                @updatedAt @db.Timestamptz(3)

  user           User          @relation(fields: [user_id], references: [id], onDelete: Cascade)
  knowledge_node KnowledgeNode @relation(fields: [knowledge_node_id], references: [id], onDelete: Cascade)

  @@unique([user_id, knowledge_node_id])
  @@index([user_id, status])
  @@index([knowledge_node_id])
  @@map("user_node_progress")
}

model ExerciseRun {
  id              String         @id @default(uuid())
  exercise_id     String
  user_id         String
  assistance_mode AssistanceMode
  code            String
  passed_tests    Int
  total_tests     Int
  output          String?
  error_message   String?
  execution_ms    Int?
  created_at      DateTime       @default(now()) @db.Timestamptz(3)

  exercise Exercise @relation(fields: [exercise_id], references: [id], onDelete: Cascade)
  user     User     @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@index([user_id, exercise_id, created_at(sort: Desc)])
  @@index([exercise_id])
  @@map("exercise_runs")
}

model ExerciseSubmission {
  id               String                   @id @default(uuid())
  exercise_id      String
  user_id          String
  assistance_mode  AssistanceMode
  status           ExerciseSubmissionStatus
  code             String
  passed_public    Int
  total_public     Int
  passed_hidden    Int
  total_hidden     Int
  xp_earned        Int                      @default(0)
  first_completion Boolean                  @default(false)
  error_message    String?
  execution_ms     Int?
  created_at       DateTime                 @default(now()) @db.Timestamptz(3)

  exercise Exercise @relation(fields: [exercise_id], references: [id], onDelete: Cascade)
  user     User     @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@index([user_id, exercise_id, created_at(sort: Desc)])
  @@index([exercise_id, status])
  @@map("exercise_submissions")
}

model LearningEvent {
  id              String            @id @default(uuid())
  user_id         String
  exercise_id     String?
  event_type      LearningEventType
  assistance_mode AssistanceMode?
  metadata        Json              @default("{}")
  created_at      DateTime          @default(now()) @db.Timestamptz(3)

  user     User      @relation(fields: [user_id], references: [id], onDelete: Cascade)
  exercise Exercise? @relation(fields: [exercise_id], references: [id], onDelete: Cascade)

  @@index([user_id, event_type, created_at(sort: Desc)])
  @@index([exercise_id])
  @@map("learning_events")
}

model Post {
  id           String    @id @default(uuid())
  author_id    String
  title        String
  body         String
  language     Language?
  code_snippet String?
  image_url    String?
  is_pinned    Boolean   @default(false)
  created_at   DateTime  @default(now())
  view_count   Int       @default(0)
  upvotes      Int       @default(0)

  author    User       @relation(fields: [author_id], references: [id], onDelete: Cascade)
  answers   Answer[]
  quizzes   Quiz[]
  votes     PostVote[]
  bookmarks Bookmark[]
  reports   Report[]
  reactions Reaction[]

  @@index([created_at(sort: Desc), id(sort: Desc)])
}

model Answer {
  id           String   @id @default(uuid())
  post_id      String
  author_id    String
  parent_id    String?
  body         String
  code_snippet String?
  is_accepted  Boolean  @default(false)
  upvotes      Int      @default(0)
  created_at   DateTime @default(now())

  post    Post         @relation(fields: [post_id], references: [id], onDelete: Cascade)
  author  User         @relation(fields: [author_id], references: [id], onDelete: Cascade)
  parent  Answer?      @relation("AnswerReplies", fields: [parent_id], references: [id], onDelete: Cascade)
  replies Answer[]     @relation("AnswerReplies")
  votes   AnswerVote[]

  @@index([parent_id])
}

model Quiz {
  id            String    @id @default(uuid())
  post_id       String?
  question      String
  options       Json
  correct_index Int
  is_daily      Boolean   @default(false)
  scheduled_for DateTime? @unique
  created_at    DateTime  @default(now())

  post     Post?         @relation(fields: [post_id], references: [id], onDelete: Cascade)
  attempts QuizAttempt[]

  @@index([is_daily, created_at])
  @@index([scheduled_for])
}

model QuizAttempt {
  id             String   @id @default(uuid())
  user_id        String
  quiz_id        String
  selected_index Int
  is_correct     Boolean
  xp_earned      Int      @default(0)
  created_at     DateTime @default(now())

  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)
  quiz Quiz @relation(fields: [quiz_id], references: [id], onDelete: Cascade)

  @@unique([user_id, quiz_id])
}

model DuelRequest {
  id          String            @id @default(uuid())
  sender_id   String
  receiver_id String
  language    Language          @default(TS)
  status      DuelRequestStatus @default(PENDING)
  expires_at  DateTime
  created_at  DateTime          @default(now())

  sender   User @relation("duel_requests_sent", fields: [sender_id], references: [id], onDelete: Cascade)
  receiver User @relation("duel_requests_recv", fields: [receiver_id], references: [id], onDelete: Cascade)

  @@index([receiver_id, status])
}

model Duel {
  id                 String     @id @default(uuid())
  challenger_id      String
  opponent_id        String?
  problem_title      String
  problem_body       String
  problem_id         String?
  language           Language
  status             DuelStatus @default(PENDING)
  time_limit_seconds Int        @default(7200)
  match_deadline     DateTime?
  started_at         DateTime?
  finished_at        DateTime?
  winner_id          String?
  closed_reason      String?
  xp_awarded_at      DateTime?
  created_at         DateTime   @default(now())

  challenger  User             @relation("challenger", fields: [challenger_id], references: [id], onDelete: Cascade)
  opponent    User?            @relation("opponent", fields: [opponent_id], references: [id], onDelete: SetNull)
  winner      User?            @relation("duel_winner", fields: [winner_id], references: [id], onDelete: SetNull)
  solutions   DuelSolution[]
  submissions DuelSubmission[]
  votes       DuelVote[]
  evaluations DuelEvaluation[]

  @@index([status, match_deadline])
  @@index([language, status, created_at])
}

model DuelSolution {
  id           String   @id @default(uuid())
  duel_id      String
  user_id      String
  code         String
  vote_count   Int      @default(0)
  score        Int      @default(0)
  runtime_ms   Int?
  complexity   String?
  submitted_at DateTime @default(now())

  duel Duel @relation(fields: [duel_id], references: [id], onDelete: Cascade)
  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([duel_id, user_id])
}

model DuelSubmission {
  id               String               @id @default(uuid())
  duel_id          String
  user_id          String
  code             String
  status           DuelSubmissionStatus
  passed_tests     Int                  @default(0)
  total_tests      Int                  @default(0)
  runtime_ms       Int?
  complexity       String?
  complexity_score Int                  @default(0)
  score            Int                  @default(0)
  public_result    Json?
  created_at       DateTime             @default(now())

  duel Duel @relation(fields: [duel_id], references: [id], onDelete: Cascade)
  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@index([duel_id, user_id, created_at(sort: Desc)])
}

model DuelVote {
  id          String   @id @default(uuid())
  duel_id     String
  user_id     String
  solution_id String
  created_at  DateTime @default(now())

  duel Duel @relation(fields: [duel_id], references: [id], onDelete: Cascade)
  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([duel_id, user_id])
}

model DuelEvaluation {
  id              String         @id @default(uuid())
  duel_id         String
  evaluator_id    String?
  type            EvaluationType @default(AUTOMATIC)
  score_player1   Int            @default(0)
  score_player2   Int            @default(0)
  system_analysis Json?
  human_feedback  String?
  strengths       String[]
  improvements    String[]
  created_at      DateTime       @default(now())

  duel      Duel  @relation(fields: [duel_id], references: [id], onDelete: Cascade)
  evaluator User? @relation(fields: [evaluator_id], references: [id], onDelete: SetNull)

  @@index([duel_id])
}

model Event {
  id               String      @id @default(uuid())
  creator_id       String
  company_id       String?
  title            String
  slug             String      @unique
  description      String
  type             EventType   @default(CHALLENGE)
  status           EventStatus @default(UPCOMING)
  banner_url       String?
  min_level        Int         @default(1)
  max_participants Int?
  xp_reward        Int         @default(250)
  start_date       DateTime
  end_date         DateTime
  created_at       DateTime    @default(now())

  creator      User               @relation(fields: [creator_id], references: [id], onDelete: Cascade)
  company      Company?           @relation(fields: [company_id], references: [id], onDelete: SetNull)
  participants EventParticipant[]

  @@index([status, start_date])
}

model EventParticipant {
  id        String   @id @default(uuid())
  event_id  String
  user_id   String
  score     Int      @default(0)
  rank      Int?
  joined_at DateTime @default(now())

  event Event @relation(fields: [event_id], references: [id], onDelete: Cascade)
  user  User  @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([event_id, user_id])
  @@index([event_id, score(sort: Desc)])
}

model Badge {
  id          String @id @default(uuid())
  slug        String @unique
  label       String
  description String
  icon        String
  color       String

  users UserBadge[]
}

model UserBadge {
  id        String   @id @default(uuid())
  user_id   String
  badge_id  String
  earned_at DateTime @default(now())

  user  User  @relation(fields: [user_id], references: [id], onDelete: Cascade)
  badge Badge @relation(fields: [badge_id], references: [id], onDelete: Cascade)

  @@unique([user_id, badge_id])
}

model PostVote {
  id         String   @id @default(uuid())
  post_id    String
  user_id    String
  value      Int // 1 for upvote, -1 for downvote
  created_at DateTime @default(now())

  post Post @relation(fields: [post_id], references: [id], onDelete: Cascade)
  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([post_id, user_id])
}

model AnswerVote {
  id         String   @id @default(uuid())
  answer_id  String
  user_id    String
  value      Int // 1 for upvote, -1 for downvote
  created_at DateTime @default(now())

  answer Answer @relation(fields: [answer_id], references: [id], onDelete: Cascade)
  user   User   @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([answer_id, user_id])
}

model Message {
  id          String    @id @default(uuid())
  sender_id   String
  receiver_id String
  content     String
  image_url   String?
  is_edited   Boolean   @default(false)
  created_at  DateTime  @default(now())
  updated_at  DateTime?

  sender    User              @relation("sent_messages", fields: [sender_id], references: [id], onDelete: Cascade)
  receiver  User              @relation("received_messages", fields: [receiver_id], references: [id], onDelete: Cascade)
  reactions MessageReaction[]

  @@index([created_at])
}

model MessageReaction {
  id         String   @id @default(uuid())
  message_id String
  user_id    String
  emoji      String
  created_at DateTime @default(now())

  message Message @relation(fields: [message_id], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([message_id, user_id, emoji])
  @@index([message_id])
  @@index([user_id])
}

model Bookmark {
  id         String   @id @default(uuid())
  user_id    String
  post_id    String
  created_at DateTime @default(now())

  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)
  post Post @relation(fields: [post_id], references: [id], onDelete: Cascade)

  @@unique([user_id, post_id])
  @@index([created_at])
}

enum GuildRole {
  OWNER
  ADMIN
  MEMBER
}

enum NotificationType {
  LIKE
  REACTION
  COMMENT
  MENTION
  XP_MILESTONE
  FOLLOW
  QUIZ_CORRECT
  LEVEL_UP
  DUEL_CHALLENGE
  DUEL_RESULT
  DUEL_REQUEST
  DUEL_ACCEPTED
  DUEL_REJECTED
  EVALUATION_COMPLETED
  JOB_APPLICATION_UPDATE
  EVENT_START
  EVALUATOR_APPROVED
  EVALUATOR_REJECTED
}

model Notification {
  id           String           @id @default(cuid())
  userId       String
  type         NotificationType
  actorId      String?
  resourceId   String?
  resourceType String?
  read         Boolean          @default(false)
  createdAt    DateTime         @default(now())
  user         User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  actor        User?            @relation("NotificationActor", fields: [actorId], references: [id], onDelete: SetNull)

  @@index([userId, createdAt(sort: Desc)])
}

model Report {
  id         String   @id @default(uuid())
  user_id    String
  post_id    String
  reason     String
  created_at DateTime @default(now())

  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)
  post Post @relation(fields: [post_id], references: [id], onDelete: Cascade)

  @@unique([user_id, post_id])
  @@index([created_at])
}

model Follow {
  followerId  String
  followingId String
  createdAt   DateTime @default(now())
  follower    User     @relation("Following", fields: [followerId], references: [id], onDelete: Cascade)
  following   User     @relation("Followers", fields: [followingId], references: [id], onDelete: Cascade)

  @@id([followerId, followingId])
  @@index([followerId])
  @@index([followingId])
}

model Reaction {
  id         String   @id @default(uuid())
  post_id    String
  user_id    String
  type       String // FIRE/HEART/LAUGH/CLAP/BULB
  created_at DateTime @default(now())

  post Post @relation(fields: [post_id], references: [id], onDelete: Cascade)
  user User @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([post_id, user_id])
  @@index([post_id])
}

model Guild {
  id          String    @id @default(uuid())
  name        String
  slug        String    @unique
  description String?
  icon        String?
  language    Language?
  is_public   Boolean   @default(true)
  created_at  DateTime  @default(now())

  owner_id String
  owner    User          @relation("OwnedGuilds", fields: [owner_id], references: [id], onDelete: Cascade)
  members  GuildMember[]

  @@index([slug])
  @@index([created_at(sort: Desc)])
}

model GuildMember {
  id        String    @id @default(uuid())
  guild_id  String
  user_id   String
  role      GuildRole @default(MEMBER)
  joined_at DateTime  @default(now())

  guild Guild @relation(fields: [guild_id], references: [id], onDelete: Cascade)
  user  User  @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([guild_id, user_id])
  @@index([user_id])
}

model QuizLibrary {
  id            String   @id @default(uuid())
  question      String
  options       Json
  correct_index Int
  tags          String[]
  created_at    DateTime @default(now())
}
